--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,37 +1,11 @@
 ---
-# apt update currently not working, disabled for now
-#- name: Update apt repositories
-#  apt:
-#    update_cache: yes
+- name: Install common packages Debian/Ubuntu
+  include_tasks: install_common_debian.yml
+  when: ansible_facts.distribution == 'Debian' or ansible_facts.distribution == 'Ubuntu'
 
-- name: Install git, screen, curl, pip, virtualenv, setuptools, software-properties-common, dirmngr, apt-transport-https and ca-certificates
-  apt:
-    name:
-      - git
-      - screen
-      - curl
-      - software-properties-common
-      - dirmngr
-      - apt-transport-https
-      - ca-certificates
-
-- name: Install python-pip, python-virtualenv, python-setuptools and python-passlib when python 2.*
-  apt:
-    name:
-      - python-pip
-      - python-virtualenv
-      - python-setuptools
-      - python-passlib
-  when: ansible_python_version is match("2\..*")
-
-- name: Install python3-pip, python3-virtualenv, python3-setuptools and python3-passlib when python 3.*
-  apt:
-    name:
-      - python3-pip
-      - python3-virtualenv
-      - python3-setuptools
-      - python3-passlib
-  when: ansible_python_version is match("3\..*")
+- name: Install common packages for AlmaLinux
+  include_tasks: install_common_almalinux.yml
+  when: ansible_facts.distribution == 'AlmaLinux'
 
 - name: Create application user if it does not yet exist
   user:
