--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,28 +1,11 @@
 ---
-- name: Add apt repository
-  include_tasks: add_apt_repository.yml
+- name: Install MariaDB for Debian/Ubuntu
+  include_tasks: install_mariadb_debian.yml
+  when: ansible_facts.distribution == 'Debian' or ansible_facts.distribution == 'Ubuntu'
 
-# apt update currently not working, disabled for now
-#- name: Update apt repositories
-#  apt:
-#    update_cache: yes
-
-- name: Install MariaDB
-  apt:
-    name:
-      - mariadb-server
-
-- name: Install python-pymysql when python 2.*
-  apt:
-    name:
-      - python-pymysql
-  when: ansible_python_version is match("2\..*")
-
-- name: Install python3-pymysql when python 3.*
-  apt:
-    name:
-      - python3-pymysql
-  when: ansible_python_version is match("3\..*")
+- name: Install MariaDB for AlmaLinux
+  include_tasks: install_mariadb_almalinux.yml
+  when: ansible_facts.distribution == 'AlmaLinux'
 
 - name: Update MariaDB password for root account
   mysql_user:
