--- a/roles/common/tasks/install_common_almalinux.yml
+++ b/roles/common/tasks/install_common_almalinux.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install git, screen, curl, dirmngr, dnf-plugins-core and ca-certificates
+- name: Install git, tmux, curl, dirmngr, dnf-plugins-core and ca-certificates
   dnf:
     name:
       - git
@@ -9,20 +9,10 @@
       - dnf-plugins-core
       - ca-certificates
 
-- name: Install python-pip, python-virtualenv, python-setuptools and python-passlib when python 2.*
+- name: Install python-pip, python-virtualenv, python-setuptools and python-passlib
   dnf:
     name:
       - python-pip
       - python-virtualenv
       - python-setuptools
       - python-passlib
-  when: ansible_python_version is match("2\..*")
-
-- name: Install python3-pip, python3-virtualenv, python3-setuptools and python3-passlib when python 3.*
-  dnf:
-    name:
-      - python3-pip
-      - python3-virtualenv
-      - python3-setuptools
-      - python3-passlib
-  when: ansible_python_version is match("3\..*")
