--- a/roles/common/tasks/install_common_almalinux.yml
+++ b/roles/common/tasks/install_common_almalinux.yml
@@ -9,10 +9,22 @@
       - dnf-plugins-core
       - ca-certificates
 
-- name: Install python-pip, python-virtualenv, python-setuptools and python-passlib
+- name: Install python-pip, python-virtualenv and python-setuptools when python 2.*
   dnf:
     name:
       - python-pip
       - python-virtualenv
       - python-setuptools
-      - python-passlib
+  when: ansible_python_version is match("2\..*")
+
+- name: Install python3-pip, python3-virtualenv and python3-setuptools when python 3.*
+  dnf:
+    name:
+      - python3-pip
+      - python3-virtualenv
+      - python3-setuptools
+  when: ansible_python_version is match("3\..*")
+
+- name: Install python-passlib through pip
+  pip:
+    name: passlib
