--- a/roles/common/tasks/install_common_almalinux.yml
+++ b/roles/common/tasks/install_common_almalinux.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install git, tmux, curl, dirmngr, dnf-plugins-core and ca-certificates
+- name: Install git, tmux, curl, dirmngr, dnf-plugins-core, gcc and ca-certificates
   dnf:
     name:
       - git
@@ -7,12 +7,27 @@
       - curl
       - dirmngr
       - dnf-plugins-core
+      - gcc
       - ca-certificates
 
-- name: Install python-pip, python-virtualenv, python-setuptools and python-passlib
+- name: Install python-pip, python-virtualenv, python-setuptools and python-devel when python 2.*
   dnf:
     name:
       - python-pip
       - python-virtualenv
       - python-setuptools
-      - python-passlib
+      - python-devel
+  when: ansible_python_version is match("2\..*")
+
+- name: Install python3-pip, python3-virtualenv, python3-setuptools and python3-devel when python 3.*
+  dnf:
+    name:
+      - python3-pip
+      - python3-virtualenv
+      - python3-setuptools
+      - python3-devel
+  when: ansible_python_version is match("3\..*")
+
+- name: Install python-passlib through pip
+  pip:
+    name: passlib
