--- a/roles/mariadb/tasks/install_mariadb_almalinux.yml
+++ b/roles/mariadb/tasks/install_mariadb_almalinux.yml
@@ -3,15 +3,20 @@
   dnf:
     name:
       - mariadb-server
+      - mariadb-devel
 
-- name: Install python-pymysql when python 2.*
-  dnf:
-    name:
-      - python-pymysql
-  when: ansible_python_version is match("2\..*")
+- name: Install python-mysql
+  pip:
+    name: mysql
 
-- name: Install python3-pymysql when python 3.*
-  dnf:
-    name:
-      - python3-pymysql
-  when: ansible_python_version is match("3\..*")
+#- name: Install python-pymysql when python 2.*
+#  dnf:
+#    name:
+#      - python-mysql
+#  when: ansible_python_version is match("2\..*")
+
+#- name: Install python3-pymysql when python 3.*
+#  dnf:
+#    name:
+#      - python3-mysql
+#  when: ansible_python_version is match("3\..*")
