--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -7,11 +7,16 @@
   include_tasks: install_mariadb_almalinux.yml
   when: ansible_facts.distribution == 'AlmaLinux'
 
+- name: Start and enable MariaDB
+  service:
+    name: mariadb
+    enabled: true
+    state: started
+
 - name: Update MariaDB password for root account
   mysql_user:
     name: root
     password: "{{ mariadb_root_password }}"
-    login_unix_socket: /var/run/mysqld/mysqld.sock
     login_password: "{{ mariadb_root_password }}"
     host: "localhost"
     priv: "*.*:ALL,GRANT"
