--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,16 +1,20 @@
 ---
 - name: Install nginx
-  apt: name=nginx state=present
+  apt:
+    name: nginx
+    state: present
 
 - name: Delete default nginx vhost symlink
-  file: path=/etc/nginx/sites-enabled/default state=absent
+  file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
   notify: restart nginx
 
 - name: Enable nginx service
   service:
     name: nginx
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Create htpasswd entry if needed
   htpasswd:
