--- a/roles/datahub/tasks/mongo_commands_almalinux.yml
+++ b/roles/datahub/tasks/mongo_commands_almalinux.yml
@@ -30,6 +30,18 @@
   when: mongodb_oauth_client_exists.stdout | length == 0
   become_user: "{{ application_user }}"
 
+- name: Store _id in a var, generate client_id, secret and external_id
+  set_fact:
+    datahub:
+      repo_dir: "{{ datahub.repo_dir | regex_replace('\\/$', '') }}"
+      secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
+      oauth:
+        mongodb_consumer_id: "{{ mongodb_consumer_id_string.stdout | regex_replace('^.*ObjectId.\"(.*)\".*$', '\\1') }}"
+        client_id: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
+        secret: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
+        external_id: "{{ lookup('password', '/dev/null chars=hexdigits length=6') | lower }}"
+  when: mongodb_oauth_client_exists.stdout | length == 0
+
 - name: Insert OAuth client into MongoDB
   command: mongosh --eval 'db.Client.insert({{ lookup("template", "./mongodb_oauth_client.json") }})' datahub
   when: mongodb_oauth_client_exists.stdout | length == 0
