--- a/roles/datahub/tasks/mongo_commands_debian.yml
+++ b/roles/datahub/tasks/mongo_commands_debian.yml
@@ -19,6 +19,18 @@
   when: mongodb_consumer_user_exists.stdout | length == 0
   become_user: "{{ application_user }}"
 
+- name: Store _id in a var, generate client_id, secret and external_id
+  set_fact:
+    datahub:
+      repo_dir: "{{ datahub.repo_dir | regex_replace('\\/$', '') }}"
+      secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
+      oauth:
+        mongodb_consumer_id: "{{ mongodb_consumer_id_string.stdout | regex_replace('^.*ObjectId.\"(.*)\".*$', '\\1') }}"
+        client_id: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
+        secret: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
+        external_id: "{{ lookup('password', '/dev/null chars=hexdigits length=6') | lower }}"
+  when: mongodb_oauth_client_exists.stdout | length == 0
+
 - name: Check if OAuth client exists
   command: mongo --quiet --eval "db.Client.find({ 'applicationName' {{ ':' }} '{{ datahub.oauth.application_name }}' })" datahub
   register: mongodb_oauth_client_exists
