--- a/roles/datahub/tasks/mongo_commands_almalinux.yml
+++ b/roles/datahub/tasks/mongo_commands_almalinux.yml
@@ -36,7 +36,7 @@
       repo_dir: "{{ datahub.repo_dir | regex_replace('\\/$', '') }}"
       secret_token: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=32') }}"
       oauth:
-        mongodb_consumer_id: "{{ mongodb_consumer_id_string.stdout | regex_replace('^.*ObjectId.\'(.*)'\).*$', '\\1') }}"
+        mongodb_consumer_id: "{{ mongodb_consumer_id_string.stdout | regex_replace('^.*ObjectId.\'(.*)\'\).*$', '\\1') }}"
         client_id: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
         secret: "{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=50') }}"
         external_id: "{{ lookup('password', '/dev/null chars=hexdigits length=6') | lower }}"
