--- a/roles/condition_reports/tasks/main.yml
+++ b/roles/condition_reports/tasks/main.yml
@@ -173,3 +173,4 @@
             - "fastcgi_buffer_size          128k"
             - "fastcgi_buffers              4 256k"
             - "fastcgi_busy_buffers_size    256k"
+            - "client_max_body_size 30M"
