--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,8 +1,7 @@
 ---
-# apt update currently not working, disabled for now
-#- name: Update apt repositories
-#  apt:
-#    update_cache: yes
+- name: Update apt repositories
+  apt:
+    update_cache: yes
 
 - name: Install git, screen, curl, pip, virtualenv, setuptools, software-properties-common, dirmngr, apt-transport-https and ca-certificates
   apt:
