Adds resourcespace_annotations_url

--- a/roles/imagehub/templates/imagehub.yaml
+++ b/roles/imagehub/templates/imagehub.yaml
@@ -3,6 +3,7 @@ parameters:
     resourcespace_api_url: '{{ imagehub.resourcespace_api_url }}'
     resourcespace_api_username: '{{ imagehub.resourcespace_api_username }}'
     resourcespace_api_key: '{{ rs_api_key }}'
+    resourcespace_annotations_url: '{{ imagehub.resourcespace_annotations_url }}'
 
     datahub_url: '{{ imagehub.datahub_url }}'
 
