--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -184,6 +184,7 @@ imagehub:
   cantaloupe_url: https://images.example.com
   resourcespace_api_url: https://resourcespace.example.com
   resourcespace_api_username: admin
+  resourcespace_annotations_url: ''
   datahub_url: https://datahub.example.com
   datahub_record_id_prefix: 'oai:datahub.example.com:example.com:'
   related_works_xpath: 'descriptiveMetadata[@xml:lang="{language}"]/objectRelationWrap/relatedWorksWrap/relatedWorkSet'
