Adds Datahub Dashboard .env, sets imagehub environment to prod

--- a/roles/datahub-dashboard/tasks/main.yml
+++ b/roles/datahub-dashboard/tasks/main.yml
@@ -76,10 +76,16 @@
       dest: vendor
   become_user: "{{ application_user }}"
 
-- name: Copy parameters.yml for datahub dashboard
+- name: Copy parameters.yml for datahub dashboard (older Symfony versions)
   template:
     src: parameters.yml
     dest: "{{ datahub_dashboard.repo_dir }}/repo/app/config/parameters.yml"
+  become_user: "{{ application_user }}"
+
+- name: Copy .env for datahub dashboard (Symfony 7+)
+  template:
+    src: .env
+    dest: "{{ datahub_dashboard.repo_dir }}/repo/app/.env"
   become_user: "{{ application_user }}"
 
 - name: Link datahub dashboard repo
