Fixes mongodb connection string

--- a/roles/datahub-dashboard/templates/.env
+++ b/roles/datahub-dashboard/templates/.env
@@ -26,7 +26,7 @@ DATAHUB_URL="{{ datahub_dashboard.datahub_url }}"
 
 ###> doctrine/mongodb-odm-bundle ###
 # Format described at https://www.mongodb.com/docs/php-library/current/connect/connection-options/
-MONGODB_SERVER=mongodb://{{ datahub_dashboard.mongodb.host }}:{{ datahub_dashboard.mongodb.port }}/{{ datahub_dashboard.mongodb.database }}
+MONGODB_SERVER=mongodb://{{ datahub_dashboard.mongodb.host }}:{{ datahub_dashboard.mongodb.port }}
 MONGODB_DB={{ datahub_dashboard.mongodb.database }}
 MONGODB_USER={{ datahub_dashboard.mongodb.username }}
 MONGODB_PASSWORD={{ datahub_dashboard.mongodb.password }}
