--- a/roles/mariadb/tasks/add_apt_repository.yml
+++ b/roles/mariadb/tasks/add_apt_repository.yml
@@ -1,29 +1,25 @@
 ---
-- name: Configure apt repository if Debian 10
+- name: Determine distribution codename
   set_fact:
-    mariadb_apt_repository: "deb [arch=amd64,arm64,ppc64el] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.6/debian buster main"
-  when: ansible_facts.distribution == 'Debian' and ansible_facts.distribution_major_version == '10'
+    distro_codename: "{{ ansible_facts.lsb.codename | default(ansible_facts.os_release.codename, true) }}"
 
-- name: Configure apt repository if Debian 11
+- name: Set MariaDB APT repository URL for Debian
   set_fact:
-    mariadb_apt_repository: "deb [arch=amd64,arm64,ppc64el] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.6/debian bullseye main"
-  when: ansible_facts.distribution == 'Debian' and ansible_facts.distribution_major_version == '11'
+    mariadb_apt_repository: "deb [arch=amd64,arm64,ppc64el] http://ams2.mirrors.digitalocean.com/mariadb/repo/{{ mariadb_version }}/debian {{ distro_codename }} main"
+  when: ansible_facts.distribution == 'Debian'
 
-- name: Configure apt repository if Ubuntu 18
+- name: Set MariaDB APT repository URL for Ubuntu
   set_fact:
-    mariadb_apt_repository: "deb [arch=amd64,arm64,ppc64el] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.6/ubuntu bionic main"
-  when: ansible_facts.distribution == 'Ubuntu' and ansible_facts.distribution_major_version == '18'
+    mariadb_apt_repository: "deb [arch=amd64,arm64,ppc64el] http://ams2.mirrors.digitalocean.com/mariadb/repo/{{ mariadb_version }}/ubuntu {{ distro_codename }} main"
+  when: ansible_facts.distribution == 'Ubuntu'
 
-- name: Configure apt repository if Ubuntu 20
-  set_fact:
-    mariadb_apt_repository: "deb [arch=amd64] http://ams2.mirrors.digitalocean.com/mariadb/repo/10.6/ubuntu focal main"
-  when: ansible_facts.distribution == 'Ubuntu' and ansible_facts.distribution_major_version == '20'
-
-- name: Add PGP key
+- name: Add MariaDB signing key
   apt_key:
     url: https://mariadb.org/mariadb_release_signing_key.asc
+    state: present
 
-- name: Add apt repository
+- name: Add MariaDB APT repository
   apt_repository:
     repo: "{{ mariadb_apt_repository }}"
-
+    state: present
+    filename: "mariadb"
