Do not add apt repositories for mongodb and mariadb

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Add apt repository
-  include_tasks: add_apt_repository.yml
+#- name: Add apt repository
+#  include_tasks: add_apt_repository.yml
 
 # apt update currently not working, disabled for now
 #- name: Update apt repositories
