--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Add apt repository
-  include_tasks: add_apt_repository.yml
+#- name: Add apt repository
+#  include_tasks: add_apt_repository.yml
 
 - name: Install mongodb-org
   apt:
