Fixes pymongo installation

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -15,6 +15,7 @@
   pip:
     name:
       - pymongo==3.12.2
+    break_system_packages: yes
 
 - name: Setup MongoDB root user
   community.mongodb.mongodb_user:
