--- a/roles/nginx/tasks/create_vhost.yml
+++ b/roles/nginx/tasks/create_vhost.yml
@@ -20,7 +20,7 @@
 
 - name: Add domain to LetsEncrypt array to request SSL certificates
   set_fact:
-    letsencrypt_vhosts: "{{ letsencrypt_vhosts }} + [ {{ vhost }} ]"
+    letsencrypt_vhosts: "{{ letsencrypt_vhosts + [ {{ vhost }} ] }}"
   when: vhost.ssl | length == 0 and stat_result.stat.exists
 
 - name: Append key and chain location to vhost
@@ -68,12 +68,12 @@
 
 - name: Add port 80 to nginx config
   set_fact:
-    listen_ports: "{{ listen_ports }} + [ '80' ]"
+    listen_ports: "{{ listen_ports + [ '80' ] }}"
   when: vhost.ssl.cert is not defined or not vhost.redirect_to_https
 
 - name: Add port 443 to nginx config
   set_fact:
-    listen_ports: "{{ listen_ports }} + [ '443' ]"
+    listen_ports: "{{ listen_ports + [ '443' ] }}"
   when: cert_exists.stat is defined and cert_exists.stat.exists and key_exists.stat is defined and key_exists.stat.exists and chain_exists.stat is defined and chain_exists.stat.exists
 
 - name: Create fastcgi temp path if needed
@@ -100,5 +100,5 @@
 
 - name: Add domain to LetsEncrypt array to request SSL certificates at the end of the play
   set_fact:
-    letsencrypt_vhosts: "{{ letsencrypt_vhosts }} + [ {{ vhost }} ]"
+    letsencrypt_vhosts: "{{ letsencrypt_vhosts + [ {{ vhost }} ] }}"
   when: vhost.ssl | length == 0
