Fixes nested curly braces

--- a/roles/condition_reports/tasks/main.yml
+++ b/roles/condition_reports/tasks/main.yml
@@ -138,7 +138,7 @@
 
 - name: Provide crontab entry for daily reload of condition report records
   set_fact:
-    cronjobs: "{{ cronjobs + [ 'php {{ condition_reports.dir }}/bin/console app:datahub-to-mysql' ] }}"
+    cronjobs: "{{ cronjobs + [ 'php ' ~ condition_reports.dir ~ '/bin/console app:datahub-to-mysql' ] }}"
 
 - name: Include condition reports php-fpm pool
   include_role:
